--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
+    "react-avatar": "^5.0.4",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
